Add attachment direct upload operation
